# lob

./: .gitignore  CHANGELOG.md  COMMIT_MESSAGE.txt  Cargo.toml  EMBEDDED_TOOLCHAIN_README.md  ERROR_FORMATTING.md  IMPLEMENTATION_SUMMARY.md  LAZY_EVALUATION.md  LICENSE  PERFORMANCE.md  PRE_COMMIT_CHECKLIST.md  README.md  TODO.md  TOOLCHAIN_COMMIT_MESSAGE.txt  install.sh  mkdocs.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
completions/: README.md
crates/lob-cli/: Cargo.toml  build.rs
crates/lob-cli/src/: cache.rs  codegen.rs  compile.rs  error.rs  input.rs  main.rs  output.rs  suggestion.rs  toolchain.rs  welcome.rs
crates/lob-cli/tests/: cli_test.rs  features_test.rs  integration_test.rs
crates/lob-core/: Cargo.toml
crates/lob-core/src/: fluent.rs  grouping.rs  joins.rs  lib.rs  selection.rs  terminal.rs  transformation.rs
crates/lob-core/tests/: grouping_tests.rs  joins_tests.rs  selection_tests.rs  terminal_tests.rs  transformation_tests.rs
crates/lob-prelude/: Cargo.toml
crates/lob-prelude/src/: lib.rs
docs/: index.md
docs/api/: overview.md
docs/examples/: logs.md
docs/guide/: cli.md  installation.md  quickstart.md
homebrew/: lob.rb
npm/: install.js  package.json
scripts/: release.sh  setup-hooks.sh
