[workspace]
resolver = "2"
members = [
    "crates/lob-cli",
    "crates/lob-core",
    "crates/lob-prelude",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Oliver Rice"]
license = "MIT"
repository = "https://github.com/olirice/lob"

[workspace.dependencies]
lob-core = { path = "crates/lob-core" }
lob-prelude = { path = "crates/lob-prelude" }

# Core dependencies
itertools = "0.12"
anyhow = "1.0"
thiserror = "1.0"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10"
dirs = "5.0"
tar = "0.4"
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
tabled = "0.16"

# Build dependencies
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }

# Dev dependencies
proptest = "1.4"
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.5"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
uninlined_format_args = "allow"
stable_sort_primitive = "allow"
unnecessary_debug_formatting = "allow"
cast_precision_loss = "allow"
missing_const_for_fn = "allow"
unnecessary_wraps = "allow"
format_push_string = "allow"
nonminimal_bool = "allow"
to_string_in_format_args = "allow"
redundant_closure_for_method_calls = "allow"
struct_excessive_bools = "allow"
cargo_common_metadata = "allow"
if_not_else = "allow"
literal_string_with_formatting_args = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
