[package]
name = "lob-prelude"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "User-facing prelude for lob data pipelines"

[dependencies]
lob-core = { workspace = true }
csv = "1.4.0"
serde = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }

[lints]
workspace = true
